新增post页面的cover效果

--- a/layout/archive.ejs
+++ b/layout/archive.ejs
@@ -42,6 +42,8 @@ yearArr.forEach(function(year) {
 });
 %>
 
+<%- partial('_partial/bg-cover') %>
+
 <main class="content">    
     <div id="cd-timeline" class="container">
         <% Object.keys(archivesList).reverse().forEach(function(year){  %>
