--- a/layout/tags.ejs
+++ b/layout/tags.ejs
@@ -1,3 +1,5 @@
+<%- partial('_partial/bg-cover') %>
+
 <main class="content">
     <div id="tags" class="container">
         <div class="tag-chips">
