更改主题样式

--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="page-footer bf-color">
+<footer class="page-footer bg-color">
     <div class="container row center-align">
         <div class="col s12 m12 l8 copy-right">
             本站由&copy;<a href="http://blinkfox.com" target="_blank">Blinkfox</a>基于
