--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -1,5 +1,5 @@
 <header class="navbar-fixed">
-    <nav id="headNav" class="bf-color nav-transparent">
+    <nav id="headNav" class="bg-color nav-transparent">
         <div id="navContainer" class="container">
             <div class="nav-wrapper">
                 <div class="brand-logo">
