--- a/layout/_partial/mobile-nav.ejs
+++ b/layout/_partial/mobile-nav.ejs
@@ -1,5 +1,5 @@
 <div class="side-nav" id="mobile-nav">
-    <div class="mobile-head bf-color">
+    <div class="mobile-head bg-color">
         <% if (theme.logo !== undefined && theme.logo.length > 0) { %>
         <img src="<%= theme.logo %>" class="logo-img circle responsive-img">
         <% } %>
