--- a/layout/_partial/prev-next.ejs
+++ b/layout/_partial/prev-next.ejs
@@ -58,7 +58,7 @@ var featureImages = theme.featureImages;
                     <div class="card-action article-tags">
                         <% page.prev.tags.forEach(tag => { %>
                         <a href="<%- url_for('/tags/#' + tag.name) %>" target="_blank">
-                            <span class="chip bf-color"><%= tag.name %></span>
+                            <span class="chip bg-color"><%= tag.name %></span>
                         </a>
                         <% }); %>
                     </div>
@@ -106,7 +106,7 @@ var featureImages = theme.featureImages;
                     <div class="card-action article-tags">
                         <% page.tags.forEach(tag => { %>
                         <a href="<%- url_for('/tags/#' + tag.name) %>" target="_blank">
-                            <span class="chip bf-color"><%= tag.name %></span>
+                            <span class="chip bg-color"><%= tag.name %></span>
                         </a>
                         <% }); %>
                     </div>
@@ -155,7 +155,7 @@ var featureImages = theme.featureImages;
                     <div class="card-action article-tags">
                         <% page.next.tags.forEach(tag => { %>
                         <a href="<%- url_for('/tags/#' + tag.name) %>" target="_blank">
-                            <span class="chip bf-color"><%= tag.name %></span>
+                            <span class="chip bg-color"><%= tag.name %></span>
                         </a>
                         <% }); %>
                     </div>
@@ -203,7 +203,7 @@ var featureImages = theme.featureImages;
                     <div class="card-action article-tags">
                         <% page.tags.forEach(tag => { %>
                         <a href="<%- url_for('/tags/#' + tag.name) %>" target="_blank">
-                            <span class="chip bf-color"><%= tag.name %></span>
+                            <span class="chip bg-color"><%= tag.name %></span>
                         </a>
                         <% }); %>
                     </div>
