--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -10,7 +10,7 @@
                 <div class="article-tag">
                     <% page.tags.each(function(tag) { %>
                     <a href="<%- url_for('/tags/#' + tag.name) %>" target="_blank">
-                        <span class="chip bf-color"><%= tag.name %></span>
+                        <span class="chip bg-color"><%= tag.name %></span>
                     </a>
                     <% }); %>
                 </div>
