新增社会化分享功能

--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -1,4 +1,4 @@
-<%- partial('_partial/post-cover', {pageType: 'post'}) %>
+<%- partial('_partial/post-cover') %>
 
 <main class="content">
 
@@ -27,24 +27,16 @@
                     <%- page.content %>
                 </div>
                 <hr />
+                
+                <%- partial('_partial/share') %>
+
                 <div class="reprint">
-                    <p><%= __('reprint') %>: <a href="<%- config.url %>" class="b-link-green"><%- config.title %></a> &raquo;
+                    <p>
+                        <span class="reprint-tip"><%= __('reprint') %>: </span>
+                        <a href="<%- config.url %>" class="b-link-green"><%- config.title %></a>
+                        <i class="fa fa-angle-right fa-lg fa-fw text-color"></i>
                         <a href="<%- url_for(page.path) %>" class="b-link-green"><%= page.title %></a>
                     </p>
-                </div>
-                <div class="article-share">
-                    <div>分享到：</div>
-                    <!-- JiaThis Button BEGIN -->
-                    <div class="jiathis_style_24x24 jt-share">
-                        <a class="jiathis_button_qzone"></a>
-                        <a class="jiathis_button_tsina"></a>
-                        <a class="jiathis_button_tqq"></a>
-                        <a class="jiathis_button_weixin"></a>
-                        <a class="jiathis_button_renren"></a>
-                        <a href="http://www.jiathis.com/share" class="jiathis jiathis_txt jtico jtico_jiathis" target="_blank"></a>
-                    </div>
-                    <script type="text/javascript" src="http://v3.jiathis.com/code/jia.js" charset="utf-8"></script>
-                    <!-- JiaThis Button END -->
                 </div>
             </div>
         </div>
