将css和js单独提取到head和footer中，修改部分样式效果

--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -19,8 +19,9 @@
     </div>
 </footer>
 
-<% if (theme.scripts !== undefined && theme.scripts.length > 0) { %>
-    <% theme.scripts.forEach(function(url) { %>
-    <script src="<%= url %>"></script>
-    <% }); %>
-<% } %>
+<script src="/libs/materialize/js/materialize.min.js"></script>
+<script src="/libs/masonry/masonry.pkgd.min.js"></script>
+<script src="/libs/aos/aos.js"></script>
+<script src="/libs/lightGallery/js/lightgallery-all.min.js"></script>
+<script src="/js/matery.js"></script>
+<script src="/js/search.js"></script>
