新增动态切换banner的功能，替换了一些特色图片

--- a/layout/tags.ejs
+++ b/layout/tags.ejs
@@ -4,7 +4,7 @@
     <div id="tags" class="container">
         <div class="tag-chips">
             <% site.tags.map(function(tag) {  %>
-            <span class="chip center-align chip-default" data-tagname="<%= tag.name %>"><%= tag.name %></span>
+            <span class="chip center-align chip-default waves-effect waves-light" data-tagname="<%= tag.name %>"><%= tag.name %></span>
             <% }); %>
         </div>
         <div >
