--- a/layout/_partial/bg-cover.ejs
+++ b/layout/_partial/bg-cover.ejs
@@ -1,4 +1,4 @@
-<div class="bg-cover" style="background-image: url('/medias/bg.jpg')">
+<div class="bg-cover" style="background-image: url('/medias/cover.jpg')">
     <div class="container">
         <div class="row">
             <div class="col s10 offset-s1 m8 offset-m2 l8 offset-l2">
@@ -16,3 +16,8 @@
         </div>
     </div>
 </div>
+
+<script>
+// Dynamically switch banner pictures every day.
+$('.bg-cover').css('background-image', 'url(/medias/banner/' + new Date().getDay() + '.jpg)');
+</script>
