修复Gitment label 50长度限制的问题

--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -19,6 +19,8 @@
     </div>
 </footer>
 
+<div class="progress-bar"></div>
+
 <script src="/libs/materialize/js/materialize.min.js"></script>
 <script src="/libs/masonry/masonry.pkgd.min.js"></script>
 <script src="/libs/aos/aos.js"></script>
