--- a/layout/archive.ejs
+++ b/layout/archive.ejs
@@ -45,11 +45,9 @@ yearArr.forEach(function(year) {
 <%- partial('_partial/bg-cover') %>
 
 <main class="content">
-    <div class="container archive-calender">
-        <div class="card">
-            <div id="post-calendar" class="card-content"></div>
-        </div>
-    </div>
+    <% if (theme.postCalendar) { %>
+    <%- partial('_partial/post-calendar') %>
+    <% } %>
 
     <div id="cd-timeline" class="container">
         <% Object.keys(archivesList).reverse().forEach(function(year){  %>
@@ -106,128 +104,3 @@ yearArr.forEach(function(year) {
         <% }); %>
     </div>
 </main>
-
-<script type="text/javascript" src="/libs/echarts/echarts.min.js"></script>
-<script type="text/javascript">
-    let myChart = echarts.init(document.getElementById('post-calendar'));
-
-    function getVirtulData(year) {
-        year = year || '2017';
-        var date = +echarts.number.parseDate(year + '-01-01');
-        var end = +echarts.number.parseDate((+year + 1) + '-01-01');
-        var dayTime = 3600 * 24 * 1000;
-        var data = [];
-        for (var time = date; time < end; time += dayTime) {
-            data.push([
-                echarts.format.formatTime('yyyy-MM-dd', time),
-                Math.floor(Math.random() * 5)
-            ]);
-        }
-        return data;
-    }
-
-    var data = [['2017-03-02', 1],
-        ['2017-05-06', 3],
-        ['2017-08-01', 2],
-        ['2017-09-06', 1],
-        ['2017-10-05', 2],
-        ['2017-10-16', 3],
-        ['2017-10-17', 1],
-        ['2017-11-25', 3],
-        ['2017-09-07', 2]];
-
-<%
-    // calculate range.
-    var startDate = moment().subtract(1, 'years').format('YYYY-MM-DD');
-    var endDate = moment().format('YYYY-MM-DD');
-    var rangeArr = '["' + startDate + '", "' + endDate + '"]';
-
-    // post and count map.
-    var dateMap = new Map();
-
-    var dayTime = 3600 * 24 * 1000;
-    var datePosts = [];
-    var i = 0;
-    for (var time = startDate; time <= endDate; time += dayTime) {
-        i++;
-        console.log(time);
-        var date = moment(time).format('YYYY-MM-DD');
-        datePosts.push([date, dateMap.has(date) ? dateMap.get(date) : 0]);
-        if (i > 2) {
-            break;
-        }
-    }
-    console.log(datePosts);
-%>
-
-    var rang = <%- rangeArr %>;
-
-    let option = {
-        title: {
-            top: 0,
-            text: 'Post Calendar',
-            left: 'center',
-            textStyle: {
-                color: '#888'
-            }
-        },
-        tooltip: {
-            padding: 10,
-            backgroundColor: '#555',
-            borderColor: '#777',
-            borderWidth: 1,
-            formatter: function (obj) {
-                var value = obj.value;
-                return '<div style="font-size: 14px;">' + value[0] + '：' + value[1] + '</div>';
-            }
-        },
-        visualMap: {
-            show: true,
-            showLabel: true,
-            categories: [0, 1, 2, 3, 4],
-            calculable: true,
-            inRange: {
-                symbol: 'rect',
-                color: ['#ebedf0', '#c6e48b', '#7bc96f', '#239a3b', '#196127']
-            },
-            itemWidth: 12,
-            itemHeight: 12,
-            orient: 'horizontal',
-            left: 'center',
-            bottom: 0
-        },
-        calendar: [{
-            left: 'center',
-            range: rang,
-            cellSize: [13, 13],
-            splitLine: {
-                show: false
-            },
-            itemStyle: {
-                borderColor: '#fff',
-                borderWidth: 2
-            },
-            yearLabel: {
-                show: false
-            },
-            monthLabel: {
-                nameMap: 'cn',
-                fontSize: 11
-            },
-            dayLabel: {
-                formatter: '{start}  1st',
-                nameMap: 'cn',
-                fontSize: 11
-            }
-        }],
-        series: [{
-            type: 'heatmap',
-            coordinateSystem: 'calendar',
-            calendarIndex: 0,
-            data: <%- datePosts %>
-        }]
-
-    };
-
-    myChart.setOption(option);
-</script>
