修改大多数文件的代码格式，新增了my.css文件，用于书写自己的样式信息

--- a/layout/_partial/search.ejs
+++ b/layout/_partial/search.ejs
@@ -3,7 +3,8 @@
     <div class="modal-content">
         <div class="search-header">
             <span class="title"><%= __('search') %></span>
-            <input type="search" id="searchInput" name="s" placeholder="<%= __('searchTip') %>" class="search-input" autofocus="">
+            <input type="search" id="searchInput" name="s" placeholder="<%= __('searchTip') %>"
+                   class="search-input" autofocus="">
         </div>
         <div id="searchResult"></div>
     </div>
