--- a/source/css/gitment.css
+++ b/source/css/gitment.css
@@ -262,7 +262,7 @@ table tr:nth-child(2n), thead {
     border-left: 5px solid #42b983;
     padding: 1rem 0.8rem 1rem 0.8rem;
     color: #666;
-    background-color: rgba(66,185,131,.1);
+    background-color: rgba(66, 185, 131, .1);
 }
 
 .gitment-markdown pre {
