--- a/layout/_partial/search.ejs
+++ b/layout/_partial/search.ejs
@@ -10,6 +10,7 @@
     </div>
 </div>
 
+<script src="/js/search.js"></script>
 <script type="text/javascript">
     searchFunc("<%= config.root %>" + "search.xml", 'searchInput', 'searchResult');
 </script>
