--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -728,9 +728,19 @@ table tr:nth-child(2n), thead {
     margin: 0 auto;
 }
 
+#tags .card {
+    background-color: #eaeaea;
+}
+
+#tags .tag-title {
+    margin-bottom: 10px;
+    color: #555;
+    font-size: 1.75rem;
+    font-weight: 400;
+}
+
 #tags .tag-chips {
     text-align: center;
-    margin-top: 20px;
 }
 
 #tags .tags-posts {
@@ -739,7 +749,6 @@ table tr:nth-child(2n), thead {
 
 #tags .chip-default {
     color: #34495e;
-    background-color: #fff;
 }
 
 #tags .chip-active {
@@ -761,6 +770,13 @@ table tr:nth-child(2n), thead {
     word-wrap: break-word;
     cursor: pointer;
     box-shadow: 0 2px 3px rgba(0, 0, 0, .07);
+}
+
+.chip .tag-length {
+    color: #e91e63;
+    margin-left: 5px;
+    margin-right: -2px;
+    font-size: 0.5rem;
 }
 
 /* archive page. */
