--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -723,18 +723,9 @@ table tr:nth-child(2n), thead {
     margin-top: -60px;
 }
 
-#tagCloud {
-    height: 325px;
-    margin: 0 auto;
-}
-
-#tags .card {
-    background-color: #eaeaea;
-}
-
 #tags .tag-title {
     margin-bottom: 10px;
-    color: #555;
+    color: #3C4858;
     font-size: 1.75rem;
     font-weight: 400;
 }
@@ -754,7 +745,7 @@ table tr:nth-child(2n), thead {
 #tags .chip-active {
     color: #FFF !important;
     background-color: #e91e63 !important;
-    box-shadow: 2px 2px 3px #AAA;
+    box-shadow: 2px 5px 10px #aaa !important;
 }
 
 #tags .chip {
@@ -769,7 +760,7 @@ table tr:nth-child(2n), thead {
     border-radius: 5px;
     word-wrap: break-word;
     cursor: pointer;
-    box-shadow: 0 2px 3px rgba(0, 0, 0, .07);
+    box-shadow: 0 3px 5px rgba(0, 0, 0, .12);
 }
 
 .chip .tag-length {
