--- a/layout/archive.ejs
+++ b/layout/archive.ejs
@@ -1,66 +1,31 @@
-<%
-var hashCode = function (str) {
-    if (!str && str.length === 0) {
-        return 0;
-    }
-
-    var hash = 0;
-    for (var i = 0, len = str.length; i < len; i++) {
-        hash = ((hash << 5) - hash) + str.charCodeAt(i);
-        hash |= 0;
-    }
-    return hash;
-};
-
-var archivesList = {}, lastYear = null, yearArr = [];
-
-site.posts.sort('date').reverse().forEach(function (post) {
-    var year = post.date.year();
-    if (lastYear == null || lastYear != year) {
-        lastYear = year;
-        yearArr.push(lastYear);
-    }
-});
-
-yearArr.forEach(function (year) {
-    if (archivesList[year] == undefined) {
-        archivesList[year] = {};
-    }
-
-    var monthPosts = {};
-    site.posts.sort('date').reverse().forEach(function (post) {
-        if (year == post.date.year()) {
-            var month = post.date.format('MM');
-            if (monthPosts[month] == undefined) {
-                monthPosts[month] = [];
-            }
-            monthPosts[month].push(post);
-        }
-    });
-
-    archivesList[year] = monthPosts;
-});
-%>
 <%- partial('_partial/bg-cover') %>
 
 <main class="content">
+
     <% if (theme.postCalendar) { %>
     <%- partial('_partial/post-calendar') %>
     <% } %>
 
+    <%
+    var hashCode = function (str) {
+        if (!str && str.length === 0) {
+            return 0;
+        }
+
+        var hash = 0;
+        for (var i = 0, len = str.length; i < len; i++) {
+            hash = ((hash << 5) - hash) + str.charCodeAt(i);
+            hash |= 0;
+        }
+        return hash;
+    };
+    %>
+
     <div id="cd-timeline" class="container">
-        <% Object.keys(archivesList).reverse().forEach(function(year){ %>
-        <div class="cd-timeline-img year bg-color">
-            <span><%= year %></span>
-        </div>
-        <% Object.keys(archivesList[year]).forEach(function(month){ %>
-        <div class="cd-timeline-img month bg-color">
-            <span><%= month %></span>
-        </div>
-        <% archivesList[year][month].map(function(post){ %>
+        <% page.posts.each(function(post) { %>
         <div class="cd-timeline-block" data-aos="fade-up">
             <div class="cd-timeline-img day bg-color">
-                <span><%= date(post.date, 'YYYY-MM-DD').substring(8, 10) %></span>
+                <span><%- date(post.date, 'YYYY-MM-DD').substring(8, 10) %></span>
             </div>
             <div class="cd-timeline-content">
                 <div class="row valign-wrapper">
@@ -95,11 +60,13 @@ yearArr.forEach(function (year) {
                     <% } %>
                     <span class="cd-date"><%= date(post.date, config.date_format) %></span>
                 </div>
-
             </div>
         </div>
         <% }); %>
-        <% }); %>
-        <% }); %>
     </div>
+
 </main>
+
+<% if (page.total > 0) { %>
+<%- partial('_partial/paging') %>
+<% } %>
