--- a/layout/archive.ejs
+++ b/layout/archive.ejs
@@ -7,6 +7,7 @@
     <% } %>
 
     <%
+    // hashCode function.
     var hashCode = function (str) {
         if (!str && str.length === 0) {
             return 0;
@@ -19,54 +20,92 @@
         }
         return hash;
     };
+
+    // init year and month variable.
+    var year = '1970';
+    var month = '1970-01';
+
+    // post feature image.
+    var featureimg = '/medias/featureimages/0.jpg';
+    var featureImages = theme.featureImages;
     %>
 
     <div id="cd-timeline" class="container">
         <% page.posts.each(function(post) { %>
         <div class="cd-timeline-block" data-aos="fade-up">
-            <div class="cd-timeline-img day bg-color">
+
+            <%# year. %>
+            <% if (date(post.date, 'YYYY') != year) { %>
+            <% year = date(post.date, 'YYYY'); %>
+            <div class="cd-timeline-img year">
+                <span><%- year %></span>
+            </div>
+            <% } %>
+
+            <%# month. %>
+            <% if (date(post.date, 'YYYY-MM') != month) { %>
+            <% month = date(post.date, 'YYYY-MM'); %>
+            <div class="cd-timeline-img month">
+                <span><%- date(post.date, 'MM') %></span>
+            </div>
+            <% } %>
+
+            <%# every day posts. %>
+            <div class="cd-timeline-img day">
                 <span><%- date(post.date, 'YYYY-MM-DD').substring(8, 10) %></span>
             </div>
-            <div class="cd-timeline-content">
-                <div class="row valign-wrapper">
-                    <div class="col m4 s4">
-                        <% if (post.img) { %>
-                        <div class="img-item" data-src="<%= post.img %>">
-                            <img src="<%= post.img %>" class="archive-img" alt="<%- post.title %>"/>
-                        </div>
-                        <% } else { %>
-                        <%
-                            var len = theme.featureImages.length;
-                            var num = Math.abs(hashCode(post.title) % len);
-                            var featureimg = theme.featureImages[num];
-                        %>
-                        <div class="img-item" data-src="<%= featureimg %>">
-                            <img src="<%= featureimg %>" class="archive-img thumbnail-img" alt="<%- post.title %>"/>
-                        </div>
-                        <% } %>
-                    </div>
-                    <div class="col m8 s8 article-title">
-                        <a href="<%- url_for(post.path) %>"><%- post.title ? post.title : __('untitled') %></a>
-                        <div class="summary"><%- strip_html(post.content).substring(0, 80) %></div>
+            <article class="cd-timeline-content" data-aos="fade-up">
+                <div class="article col s12 m6">
+                    <div class="card">
+                        <a href="<%- url_for(post.path) %>">
+                            <div class="card-image">
+                                <% if (post.img) { %>
+                                <img src="<%= post.img %>" class="responsive-img" alt="<%- post.title %>">
+                                <% } else { %>
+                                <%
+                                    var len = featureImages.length;
+                                    var num = Math.abs(hashCode(post.title) % len);
+                                    featureimg = featureImages[num];
+                                %>
+                                <img src="<%= featureimg %>" class="responsive-img" alt="<%- post.title %>">
+                                <% } %>
+                                <span class="card-title"><%- post.title %></span>
+                            </div>
+
+                            <div class="card-content article-content">
+                                <div class="summary"><%- strip_html(post.content).substring(0, 80) %></div>
+                                <div class="publish-info">
+                                    <span class="publish-date">
+                                        <i class="fa fa-calendar fa-fw"></i><%= date(post.date, config.date_format) %>
+                                    </span>
+                                    <span class="publish-author">
+                                        <i class="fa fa-user fa-fw"></i>
+                                        <% if(post.author && post.author.length > 0) { %>
+                                        <%= post.author %>
+                                        <% } else { %>
+                                        <%= config.author %>
+                                        <% } %>
+                                    </span>
+                                </div>
+                            </div>
+
+                            <% if (post.tags && post.tags.length) { %>
+                            <div class="card-action article-tags">
+                                <% post.tags.forEach(tag => { %>
+                                <a href="<%- tag.permalink %>"><span class="chip bg-color"><%= tag.name %></span></a>
+                                <% }); %>
+                            </div>
+                            <% } %>
+                        </a>
                     </div>
                 </div>
-                <div class="tags">
-                    <% if(post.tags && post.tags.length) { %>
-                    <% post.tags.forEach(tag => { %>
-                    <a href="<%- tag.permalink %>" target="_blank">
-                        <span class="tag bg-color"><%= tag.name %></span>
-                    </a>
-                    <% }); %>
-                    <% } %>
-                    <span class="cd-date"><%= date(post.date, config.date_format) %></span>
-                </div>
-            </div>
+            </article>
         </div>
         <% }); %>
     </div>
 
 </main>
 
-<% if (page.total > 0) { %>
+<% if (page.total > 1) { %>
 <%- partial('_partial/paging') %>
 <% } %>
