--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -784,6 +784,7 @@ table tr:nth-child(2n), thead {
     height: 80px;
     margin: 10px 0 50px -20px;
     padding: 21px 10px;
+    background-color: #ff5722;
     color: #fff;
     font-size: 1.8rem;
     font-weight: 600;
@@ -795,6 +796,7 @@ table tr:nth-child(2n), thead {
     height: 60px;
     margin: 10px 0 30px -10px;
     padding: 14px 16px;
+    background-color: #ef6c00;
     color: #fff;
     font-size: 1.7rem;
     font-weight: 600;
@@ -803,56 +805,18 @@ table tr:nth-child(2n), thead {
 #cd-timeline .day {
     position: relative;
     padding: 8px 10px;
+    background-color: #ffa726;
     color: #fff;
     font-size: 1.2rem;
     font-weight: 500;
 }
 
-#cd-timeline .archive-img {
-    width: 100%;
-    height: 100px;
-    cursor: pointer;
-}
-
-#cd-timeline .article-title {
-    height: 100px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-#cd-timeline .article-title a {
-    color: #34495e;
-    font-size: 1.7rem;
-}
-
-#cd-timeline .article-title .summary {
-    color: #999;
-    font-size: 1rem;
-}
-
-#cd-timeline .tags {
-    margin-top: 10px;
-}
-
-#cd-timeline .tags .tag {
-    margin: 1px 1px;
-    padding: 0 10px;
-    display: inline-block;
-    font-size: 0.8rem;
-    font-weight: 400;
-    height: 22px;
-    line-height: 22px;
-    border-radius: 11px;
-    color: #fff;
-    word-wrap: break-word;
-}
-
 #cd-timeline {
-    width: 90%;
+    /*width: 90%;*/
+    max-width: 850px;
     position: relative;
-    /* padding: 2em 0; */
-    margin-top: 1em;
-    margin-bottom: 2em;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 #cd-timeline::before {
@@ -868,8 +832,8 @@ table tr:nth-child(2n), thead {
 
 @media only screen and (min-width: 900px) {
     #cd-timeline {
-        margin-top: 1.5em;
-        margin-bottom: 1.5em;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
     }
 
     #cd-timeline::before {
@@ -931,18 +895,6 @@ table tr:nth-child(2n), thead {
     box-shadow: 0 0 0 4px #ffffff, inset 0 2px 0 rgba(0, 0, 0, 0.08), 0 3px 0 4px rgba(0, 0, 0, 0.05);
 }
 
-.cd-timeline-img img {
-    position: relative;
-    display: block;
-    top: 50%;
-    left: 50%;
-    width: 40px;
-    height: 40px;
-    margin-left: -20px;
-    border-radius: 50%;
-    cursor: pointer;
-}
-
 @media only screen and (min-width: 900px) {
     .cd-timeline-img {
         width: 40px;
@@ -968,10 +920,11 @@ table tr:nth-child(2n), thead {
 
 .cd-timeline-content {
     position: relative;
+    margin-top: -40px;
     margin-left: 60px;
-    background: #ffffff;
+    padding: 0;
     border-radius: 5px;
-    padding: 1em 1em 0.5em 1em;
+    background: #ffffff;
     box-shadow: 0 15px 35px rgba(50, 50, 93, .1), 0 5px 15px rgba(0, 0, 0, .07) !important;
 }
 
@@ -981,42 +934,8 @@ table tr:nth-child(2n), thead {
     display: table;
 }
 
-.cd-timeline-content h2 {
-    color: #34495e;
-}
-
-.cd-timeline-content p,
-.cd-timeline-content .cd-read-more,
-.cd-timeline-content .cd-date {
-    font-size: 0.85rem;
-}
-
-.cd-timeline-content .cd-read-more,
-.cd-timeline-content .cd-date {
-    display: inline-block;
-}
-
-.cd-timeline-content p {
-    margin: 1em 0;
-    line-height: 1.6;
-}
-
-.cd-timeline-content .cd-read-more {
-    float: right;
-    padding: .8em 1em;
-    background: #acb7c0;
-    color: #fff;
-    border-radius: 0.25em;
-}
-
-.no-touch .cd-timeline-content .cd-read-more:hover {
-    background-color: #bac4cb;
-}
-
-.cd-timeline-content .cd-date {
-    float: right;
-    padding: .4em 0;
-    opacity: .7;
+.cd-timeline-content .card {
+    margin: 0;
 }
 
 .cd-timeline-content::before {
@@ -1025,9 +944,10 @@ table tr:nth-child(2n), thead {
     top: 18px !important;
     right: 100%;
     height: 0;
-    width: 0;
-    border: 7px solid transparent;
-    border-right: 7px solid #ffffff;
+    width: 14px;
+    margin-left: 2px;
+    margin-right: 2px;
+    border: 1px dashed #ffa726;
 }
 
 @media only screen and (min-width: 768px) {
@@ -1048,16 +968,14 @@ table tr:nth-child(2n), thead {
 @media only screen and (min-width: 900px) {
     .cd-timeline-content {
         margin-left: 0;
-        padding: 0.4rem;
+        padding: 0;
         width: 45%;
-        margin-top: -40px;
+
     }
 
     .cd-timeline-content::before {
         top: 24px;
         left: 100%;
-        border-color: transparent;
-        border-left-color: #ffffff;
     }
 
     .cd-timeline-content .cd-read-more {
@@ -1072,8 +990,7 @@ table tr:nth-child(2n), thead {
         top: 24px;
         left: auto;
         right: 100%;
-        border-color: transparent;
-        border-right-color: #ffffff;
+        border-color: #ffa726;
     }
 
     .cd-timeline-block:nth-child(even) .cd-timeline-content .cd-read-more {
